[package]
name = "libpcap-rs"
version = "0.1.1"
authors = [
    "jankincai <jankincai12@gmail.com>",
]
edition = "2021"
description = "Rust encapsulates the C language libpcap"
repository = "https://github.com/caizhengxin/libpcap-rs"
readme = "README.md"
# https://crates.io/category_slugs
categories = [
    "api-bindings",
    "command-line-utilities",
]
keywords = [
    "pcap",
    "pcapng",
    "pcap-files",
    "libpcap",
    "libpcap-rs",
    "pcap-analyzer",
    "pcap-parser",
    "libpcap-wrapper",
    "libpcap-driver",
]
license-file = "LICENSE"
rust-version = "1.73"
include = [
    "src/*",
    "benches/*",
    "examples/*",
    "build.rs",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
    "wrapper.h",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1
overflow-checks = false

[[bin]]
name = "libpcap-merge"
path = "src/cli/libpcap_merge.rs"

# [[bin]]
# name = "libpcap-read"
# path = "src/cli/libpcap_read.rs"

[[bin]]
name = "libpcap-write"
path = "src/cli/libpcap_write.rs"

[[bin]]
name = "libpcap-sniff"
path = "src/cli/libpcap_capture.rs"

[dependencies]
jkcenum = { git = "https://github.com/caizhengxin/jkcenum.git", features = ["derive"] }
thiserror = "*"
clap = { version = "4", features = ["derive"] }
hex = { version = "*", features = ["serde"]}

[build-dependencies]
bindgen = "*"
